dnl Process this file with autoconf to produce a configure script.
dnl Copyright (c) 2001 IPD, Universität Karlsruhe (TH)

dnl libFIRM Project
dnl $Id$

AC_REVISION($Id$)


AC_INIT(libfirm,0.3.0)
AC_PREREQ(2.50)
dnl if other files should be generated just add them to ac_output_files
ac_output_file="Makefile MakeRules ir/Makefile ir/adt/Makefile ir/debug/Makefile \
		ir/tv/Makefile ir/common/Makefile ir/ident/Makefile ir/ir/Makefile \
		ir/ana/Makefile ir/tr/Makefile ir/st/Makefile testprograms/Makefile \
		firmjni/Makefile firmjni/build_firm_jni firmjni/testprograms/Makefile"

dnl generate the config header file
AC_CONFIG_HEADER(config.h)

dnl keep track of the environment set by the user
libfirm_conf_env="${CC+CC='$CC'} ${CFLAGS+CFLAGS='$CFLAGS'} ${CPP+CPP='$CPP'} ${CPPFLAGS+CPPFLAGS='$CPPFLAGS'} ${LDFLAGS+LDFLAGS='$LDFLAGS'} ${LIBS+LIBS='$LIBS'}"
AC_SUBST(libfirm_conf_env)


dnl Package options
dnl ===============

dnl set debugging
dnl -------------
AC_ARG_ENABLE(debug,
[  --enable-debug          enable assertions and additional debugging routines],
[if test "$enableval" = yes; then
  AC_DEFINE(DEBUG_libfirm)
else
  AC_DEFINE(NDEBUG)
fi])
AC_SUBST(enable_debug_libfirm)

AC_ARG_ENABLE(gcc_inline,
[  --enable-gcc_inline     enable gcc inline C-extension],
[if test "$enableval" = yes; then
  AC_DEFINE(USE_GCC_INLINE)
fi])
AC_SUBST(enable_gcc_inline)


dnl set profiling
dnl -------------
AC_ARG_ENABLE(profile,
[  --enable-profile        enable profiling],
[if test "$enableval"=yes; then
  enable_profile_libfirm=yes
fi],
[enable_profile_libfirm=no])
AC_SUBST(enable_profile_libfirm)

dnl set auto documentation
dnl ----------------------
AC_ARG_ENABLE(autodoc,
[  --enable-autodoc        enable auto documentation],
[if test "$enableval"=yes; then
  enable_auto_documentation=yes
fi],
[enable_auto_documentation=no])
AC_SUBST(enable_auto_documentation)


dnl set firm jni
dnl ------------
AC_ARG_ENABLE(firmjni,
[  --enable-firmjni        check for tools necesarry to construct a java native interface for Firm],
[if test "$enableval"=yes; then
  enable_firm_jni=yes
fi],
[enable_firm_jni=no])
AC_SUBST(enable_firm_jni)


dnl Checks for programs.
dnl ====================

dnl check for a C compiler
dnl ----------------------
AC_PROG_CC

dnl check for prelinkable linker
dnl ----------------------------
LIBFIRM_PROG_LD_R
if test "$libfirm_cv_prog_ld_r" != "yes"; then
  AC_MSG_ERROR(need a prelinkcapable linker)
fi

dnl check for ar
dnl ------------
AC_CHECK_PROG(AR, ar, "ar", "")
if test "$AR" != "ar"; then
  AC_MSG_ERROR(need ar for creating archives)
fi

dnl check for tar
dnl -------------
AC_CHECK_PROG(TAR, tar, "tar", "")
if test "$TAR" != "tar"; then
  AC_MSG_ERROR(need tar for creating archives in distribution)
fi

dnl check whether ar can handle option -s
dnl if not then ranlib is needed
dnl for simpliticity we use ranlib every time

AC_PROG_RANLIB

AC_PROG_INSTALL

AC_PROG_LN_S

dnl check for robodoc if enabled
dnl ----------------------------
if test "$enable_auto_documentation" = yes; then
  AC_CHECK_PROG(ROBODOC, robodoc, "robodoc", "")
  if test "$ROBODOC" != "robodoc"; then
    AC_MSG_ERROR(need robodoc for auto documentation (IPD: module add robodoc))
  fi
fi


dnl check for availability of a jdk
dnl -------------------------------
if test "$enable_firm_jni" = yes; then
  AC_CHECK_PROG(JAVAC, javac, "javac", "")
  if test "$JAVAC" != "javac"; then
    AC_MSG_ERROR(need java compiler javac to generate jni (IPD: module add jdk-1.3.1-sun))
  fi
  AC_CHECK_PROG(JAVAH, javah, "javah", "")
  if test "$JAVAH" != "javah"; then
    AC_MSG_ERROR(need javah to generate jni headers (IPD: module add jdk-1.3.1-sun))
  fi
fi


dnl Checks for header files.
dnl ========================

AC_HEADER_STDC

dnl check for the math header file

AC_CHECK_HEADERS(math.h, ac_math_headers="yes", ac_math_headers="no")
if test "$ac_math_headers" != yes; then
  dnl math header not found.
  AC_MSG_ERROR("math header file not found")
fi


#dnl check for the gnu multiprecission (gmp) header file

#AC_CHECK_HEADERS(gmp.h, ac_gmp_headers="yes", ac_gmp_headers="no")
#if test "$ac_gmp_headers" != yes; then
#  dnl gmp header not found.
#  AC_MSG_ERROR("GNU multiprecission gmp header file not found")
#fi


dnl check for the obstack header file

AC_CHECK_HEADERS(obstack.h, ac_obstack_headers="yes", ac_obstack_headers="no")
if test "$ac_obstack_headers" != yes; then
  dnl obstack header not found.
  AC_MSG_ERROR("obstack header file not found")
fi


dnl check for jni header files

if test "$enable_firm_jni" = yes; then
  AC_CHECK_HEADERS(jni.h, ac_jni_headers="yes", ac_jni_headers="no")
  if test "$ac_jni_headers" != yes; then
    AC_MSG_ERROR(jni header file not found. (IPD: add -I/usr/public2/java/jdk1.3.1-sun/include/ -I/usr/public2/java/jdk1.3.1-sun/include/linux/ to CPPFLAGS))
  fi
fi


dnl Checks for libraries.
dnl =====================

#dnl check for the gnu multiprecission (gmp) library

#AC_CHECK_LIB(gmp, main, ac_gmp_library="yes", ac_gmp_library="no")
#if test "$ac_gmp_library" != yes; then
#  dnl gmp library not found.
#  AC_MSG_ERROR("GNU multiprecission gmp library not found")
#fi


AC_CHECK_LIB(m, main, ac_m_library="yes", ac_m_library="no")
if test "$ac_m_library" != yes; then
  dnl std math library not found.
  AC_MSG_ERROR("standard math library not found")
fi


dnl Checks for typedefs, structures, and compiler characteristics.
dnl ==============================================================


dnl Checks for library functions.
dnl =============================

dnl check for strerror

AC_CHECK_FUNC(strerror,,
  AC_MSG_ERROR("need strerror function")
)


dnl Error messaging
dnl ===============


AC_OUTPUT($ac_output_file,[ touch stamp-h ])
